--- a/nfl.html
+++ b/nfl.html
@@ -123,7 +123,7 @@
   <div class="container container-fluid pt-2 text-white">
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NFL Events
+     Upcoming NCAA Events
     </h2>
     <table id="eventsTable">
      <thead>
@@ -142,15 +142,43 @@
      <tbody>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nfl-streams-1">
-         San Francisco 49ers vs Indianapolis Colts
+        <a href="https://roxiestreams.live/ncaa-streams-1">
+         Toledo vs. Louisville
         </a>
        </td>
        <td>
-        December 22, 2025 5:15 PM
+        December 22, 2025 11:00 AM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 23, 2025 5:15 PM:00" data-start="December 22, 2025 5:15 PM:00">
+        <span class="countdown-timer" data-end="December 24, 2025 5:15 PM:00" data-start="December 23, 2025 11:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/ncaa-streams-1">
+         WKU vs. Southern Miss	
+        </a>
+       </td>
+       <td>
+        December 22, 2025 2:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 5:15 PM:00" data-start="December 23, 2025 2:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/ncaa-streams-1">
+         UNLV vs. Ohio
+        </a>
+       </td>
+       <td>
+        December 22, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 24, 2025 5:15 PM:00" data-start="December 23, 2025 6:00 PM:00">
         </span>
        </td>
       </tr>
