--- a/index.html
+++ b/index.html
@@ -183,23 +183,13 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NCAA (College Football)</a></td>
-                    <td>December 23, 2025 11:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 23, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/ncaa-streams-1">NCAA (College Football)</a></td>
+                    <td>December 24, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 24, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-1">Carabao Cup</a></td>
-                    <td>December 23, 2025 12:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 23, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-                    <td>December 23, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 23, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
-                    <td>December 23, 2025 17:00 PM</td>
+                    <td><a href="https://roxiestreams.live/aew">AEW</a></td>
+                    <td>December 24, 2025 12:00 PM</td>
                     <td><span class="countdown-timer" data-start="December 23, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
