--- a/nfl.html
+++ b/nfl.html
@@ -143,42 +143,14 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/ncaa-streams-1">
-         Toledo vs. Louisville
+         California v Hawai’i
         </a>
        </td>
        <td>
-        December 22, 2025 11:00 AM
+        December 24, 2025 17:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 24, 2025 5:15 PM:00" data-start="December 23, 2025 11:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/ncaa-streams-1">
-         WKU vs. Southern Miss	
-        </a>
-       </td>
-       <td>
-        December 22, 2025 2:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 24, 2025 5:15 PM:00" data-start="December 23, 2025 2:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/ncaa-streams-1">
-         UNLV vs. Ohio
-        </a>
-       </td>
-       <td>
-        December 22, 2025 6:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 24, 2025 5:15 PM:00" data-start="December 23, 2025 6:00 PM:00">
+        <span class="countdown-timer" data-end="December 25, 2025 5:15 PM:00" data-start="December 24, 2025 5:00 PM:00">
         </span>
        </td>
       </tr>
