--- a/nba.html
+++ b/nba.html
@@ -143,196 +143,70 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Washington Wizards vs Charlotte Hornets
+         Cleveland Cavaliers vs New York Knicks
         </a>
        </td>
        <td>
-        December 23, 2025 4:00 PM
+        December 25, 2025 9:00 AM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 24, 2025 4:00 PM:00" data-start="December 23, 2025 4:00 PM:00">
+        <span class="countdown-timer" data-end="December 26, 2025 9:00 AM:00" data-start="December 25, 2025 9:00 AM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Brooklyn Nets vs Philadelphia 76ers
+         San Antonio Spurs vs Oklahoma City Thunder
         </a>
        </td>
        <td>
-        December 23, 2025 4:00 PM
+        December 25, 2025 11:30 AM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 24, 2025 4:00 PM:00" data-start="December 23, 2025 4:00 PM:00">
+        <span class="countdown-timer" data-end="December 26, 2025 11:30 AM:00" data-start="December 25, 2025 11:30 AM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         Chicago Bulls vs Atlanta Hawks
+         Dallas Mavericks vs Golden State Warriors
         </a>
        </td>
        <td>
-        December 23, 2025 4:30 PM
+        December 25, 2025 2:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 24, 2025 4:30 PM:00" data-start="December 23, 2025 4:30 PM:00">
+        <span class="countdown-timer" data-end="December 26, 2025 2:00 PM:00" data-start="December 25, 2025 2:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         New Orleans Pelicans vs Cleveland Cavaliers
+         Houston Rockets vs Los Angeles Lakers
         </a>
        </td>
        <td>
-        December 23, 2025 4:30 PM
+        December 25, 2025 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 24, 2025 4:30 PM:00" data-start="December 23, 2025 4:30 PM:00">
+        <span class="countdown-timer" data-end="December 26, 2025 5:00 PM:00" data-start="December 25, 2025 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-5">
-         Milwaukee Bucks vs Indiana Pacers
+         Minnesota Timberwolves vs Denver Nuggets
         </a>
        </td>
        <td>
-        December 23, 2025 4:30 PM
+        December 25, 2025 7:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 24, 2025 4:30 PM:00" data-start="December 23, 2025 4:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-6">
-         Toronto Raptors vs Miami Heat
-        </a>
-       </td>
-       <td>
-        December 23, 2025 4:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 24, 2025 4:30 PM:00" data-start="December 23, 2025 4:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-7">
-         Denver Nuggets vs Dallas Mavericks
-        </a>
-       </td>
-       <td>
-        December 23, 2025 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 24, 2025 5:00 PM:00" data-start="December 23, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-8">
-         New York Knicks vs Minnesota Timberwolves
-        </a>
-       </td>
-       <td>
-        December 23, 2025 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 24, 2025 5:00 PM:00" data-start="December 23, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-9">
-         Oklahoma City Thunder vs San Antonio Spurs
-        </a>
-       </td>
-       <td>
-        December 23, 2025 5:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 24, 2025 5:30 PM:00" data-start="December 23, 2025 5:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-10">
-         Los Angeles Lakers vs Phoenix Suns
-        </a>
-       </td>
-       <td>
-        December 23, 2025 6:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 24, 2025 6:00 PM:00" data-start="December 23, 2025 6:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-11">
-         Memphis Grizzlies vs Utah Jazz
-        </a>
-       </td>
-       <td>
-        December 23, 2025 6:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 24, 2025 6:00 PM:00" data-start="December 23, 2025 6:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-12">
-         Orlando Magic vs Portland Trail Blazers
-        </a>
-       </td>
-       <td>
-        December 23, 2025 7:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 24, 2025 7:00 PM:00" data-start="December 23, 2025 7:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-13">
-         Detroit Pistons vs Sacramento Kings
-        </a>
-       </td>
-       <td>
-        December 23, 2025 7:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 24, 2025 7:00 PM:00" data-start="December 23, 2025 7:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-14">
-         Houston Rockets vs Los Angeles Clippers
-        </a>
-       </td>
-       <td>
-        December 23, 2025 7:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 24, 2025 7:30 PM:00" data-start="December 23, 2025 7:30 PM:00">
+        <span class="countdown-timer" data-end="December 26, 2025 7:30 PM:00" data-start="December 25, 2025 7:30 PM:00">
         </span>
        </td>
       </tr>
