--- a/nfl.html
+++ b/nfl.html
@@ -156,6 +156,68 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NFL Schedule for Thursday, December 25, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         Dallas Cowboys vs Washington Commanders
+        </a>
+       </td>
+       <td>
+        December 25, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 26, 2025 10:00 AM:00" data-start="December 25, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-2">
+         Detroit Lions vs Minnesota Vikings
+        </a>
+       </td>
+       <td>
+        December 25, 2025 1:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 26, 2025 1:30 PM:00" data-start="December 25, 2025 1:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-3">
+         Denver Broncos vs Kansas City Chiefs
+        </a>
+       </td>
+       <td>
+        December 25, 2025 5:15 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 26, 2025 5:15 PM:00" data-start="December 25, 2025 5:15 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
