--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -100,8 +100,7 @@
             <div id="playerContainer"></div>
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://601.biroslotutama.org/nfl.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.alfirdaus.eu.org/nflalt.m3u8')">Stream 2</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.alfirdaus.eu.org/nflalty.m3u8')">Stream 3</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.alfirdaus.eu.org/nfl.m3u8')">Stream 2</button>
           </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
