--- a/index.html
+++ b/index.html
@@ -183,20 +183,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/aew">AEW</a></td>
-                    <td>December 24, 2025 15:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 24, 2025 15:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nba">NBA Christmas Games</a></td>
+                    <td>December 25, 2025 09:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 25, 2025 09:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/ncaa-streams-1">NCAA (College Football)</a></td>
-                    <td>December 24, 2025 17:00 PM</td>
+                    <td><a href="https://roxiestreams.live/nfl">NFL Christmas Games</a></td>
+                    <td>December 25, 2025 10:00 AM</td>
                     <td><span class="countdown-timer" data-start="December 24, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
         </table>
     </div>
-
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
         <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
             <li class="nav-item"><a href="https://discord.gg/JhkVmejRmn" class="nav-link px-2 text-body-secondary">Stream Request (Discord)</a></li>
