--- a/nfl.html
+++ b/nfl.html
@@ -123,7 +123,7 @@
   <div class="container container-fluid pt-2 text-white">
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NFL Events
+     Upcoming NCAA Events
     </h2>
     <table id="eventsTable">
      <thead>
@@ -142,43 +142,43 @@
      <tbody>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nfl-streams-1">
-         Dallas Cowboys vs Washington Commanders
+        <a href="https://roxiestreams.live/ncaa-streams-1">
+         Central Michigan vs. Northwestern
         </a>
        </td>
        <td>
-        December 25, 2025 10:00 AM
+        December 26, 2025 10:00 AM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 26, 2025 10:00 AM:00" data-start="December 25, 2025 10:00 AM:00">
+        <span class="countdown-timer" data-end="December 27, 2025 10:00 AM:00" data-start="December 26, 2025 10:00 AM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nfl-streams-2">
-         Detroit Lions vs Minnesota Vikings
+        <a href="https://roxiestreams.live/ncaa-streams-2">
+         New Mexico vs. Minnesota
         </a>
        </td>
        <td>
-        December 25, 2025 1:30 PM
+        December 26, 2025 1:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 26, 2025 1:30 PM:00" data-start="December 25, 2025 1:30 PM:00">
+        <span class="countdown-timer" data-end="December 27, 2025 1:30 PM:00" data-start="December 26, 2025 1:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nfl-streams-3">
-         Denver Broncos vs Kansas City Chiefs
+        <a href="https://roxiestreams.live/ncaa-streams-3">
+         FIU vs. UTSA
         </a>
        </td>
        <td>
-        December 25, 2025 5:15 PM
+        December 26, 2025 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 26, 2025 5:15 PM:00" data-start="December 25, 2025 5:15 PM:00">
+        <span class="countdown-timer" data-end="December 27, 2025 5:15 PM:00" data-start="December 26, 2025 5:00 PM:00">
         </span>
        </td>
       </tr>
