--- a/soccer.html
+++ b/soccer.html
@@ -96,13 +96,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Arsenal vs Crystal Palace</a>
-<td>December 23, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 24, 2025 11:00:00" data-start="December 23, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Vitória Guimarães vs Sporting CP</a>
-<td>December 23, 2025 12:45 PM</td>
-<td><span class="countdown-timer" data-end="December 24, 2025 11:45:00" data-start="December 23, 2025 12:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Manchester United vs Newcastle</a>
+<td>December 26, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
 <tr>
 </tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
