--- a/index.html
+++ b/index.html
@@ -183,14 +183,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nba">NBA Christmas Games</a></td>
-                    <td>December 25, 2025 09:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 25, 2025 09:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl">NCAA (College Football Bowls)</a></td>
+                    <td>December 26, 2025 10:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 26, 2025 10:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NFL Christmas Games</a></td>
-                    <td>December 25, 2025 10:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 24, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-1">Premier League</a></td>
+                    <td>December 26, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 26, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/nba">NBA</a></td>
+                    <td>December 26, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 26, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
