--- a/nfl.html
+++ b/nfl.html
@@ -85,7 +85,7 @@
 </div></nav>
 <div class="container container-fluid pt-2 text-white">
 <div class="mt-5">
-<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming NFL & NCAA Events</h2>
+<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming NFL &amp; NCAA Events</h2>
 <table id="eventsTable">
 <thead>
 <tr>
@@ -98,45 +98,45 @@
 <tr>
 <td><a href="https://roxiestreams.live/nfl-streams-1">Houston Texans vs Los Angeles Chargers</a>
 <td>December 27, 2025 10:00 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 09:00:00" data-start="December 27, 2025 10:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/nfl-streams-2">Baltimore Ravens vs Green Bay Packers</a>
 <td>December 27, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 16:00:00" data-start="December 27, 2025 17:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">Pitt vs. East Carolina</a>
 <td>December 27, 2025 08:00 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 07:00:00" data-start="December 27, 2025 08:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-2">Penn State vs. Clemson</a>
 <td>December 27, 2025 09:00 PM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 08:00:00" data-start="December 27, 2025 09:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">UConn vs. Army</a>
 <td>December 27, 2025 11:15 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 10:15:00" data-start="December 27, 2025 11:15:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-2">Georgia Tech vs. BYU</a>
 <td>December 27, 2025 12:30 PM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 11:30:00" data-start="December 27, 2025 12:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-3">Miami (Ohio) vs. Fresno State</a>
 <td>December 27, 2025 13:30 PM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 12:30:00" data-start="December 27, 2025 13:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">North Texas vs. San Diego State</a>
 <td>December 27, 2025 14:45 PM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 13:45:00" data-start="December 27, 2025 14:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-2">Virginia vs. Missouri</a>
 <td>December 27, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 15:30:00" data-start="December 27, 2025 16:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">LSU vs. 21 Houston</a>
 <td>December 27, 2025 18:15 PM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 17:15:00" data-start="December 27, 2025 18:15:00"></span></td>
 <tr>
-</tbody></table></div>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
