--- a/soccer.html
+++ b/soccer.html
@@ -98,53 +98,53 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Nottingham vs Manchester City</a>
 <td>December 27, 2025 04:30 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 03:30:00" data-start="December 27, 2025 04:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Hibernian vs Hearts</a>
 <td>December 27, 2025 04:30 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 03:30:00" data-start="December 27, 2025 04:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Torino vs Cagliari</a>
 <td>December 27, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 05:00:00" data-start="December 27, 2025 06:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Arsenal vs Brighton</a>
 <td>December 27, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 06:00:00" data-start="December 27, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Brentford vs Bournemouth</a>
 <td>December 27, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 06:00:00" data-start="December 27, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Burnley vs Everton</a>
 <td>December 27, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 06:00:00" data-start="December 27, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-7">Liverpool vs Wolves</a>
 <td>December 27, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 06:00:00" data-start="December 27, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-8">West Ham United vs Fulham</a>
 <td>December 27, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 06:00:00" data-start="December 27, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Livingston vs Celtic</a>
 <td>December 27, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 06:00:00" data-start="December 27, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-9">Udinese vs Lazio</a>
 <td>December 27, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 08:00:00" data-start="December 27, 2025 09:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-10">Chelsea vs Aston Villa</a>
 <td>December 27, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 08:30:00" data-start="December 27, 2025 09:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-11">Pisa vs Juventus</a>
 <td>December 27, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="December 27, 2025 11:00:00" data-start="December 26, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 28, 2025 10:45:00" data-start="December 27, 2025 11:45:00"></span></td>
 <tr>
-</tbody></table></div>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
